--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class= info>
        <h2> David Martin</h2>
     <button class=b1>my projects</button>
-       <p>This is all new to me. I was a ranch foreman, now I am learning to code and I'm putting in maximum effort! I think I'm doing ok for a horse trainer although learning these skills is a 14 hour a day process so far <span>GO ME!</span></p>
+       <p>This is all new to me. I was a ranch foreman, now I am learning to code and I'm putting in maximum effort! I think I'm doing ok for a horse trainer although, learning these skills is a 14 hour a day process so far <span>GO ME!</span></p>
        </div>
 </section>
    <section class="gallery1">
