added Responsive css to profile page

--- a/index.html
+++ b/index.html
@@ -17,43 +17,63 @@
            <a href="projects.html" class="projects">Projects</a>
        </nav>
    </header>
-   <section class="main">
-       <img src="https://picsum.photos/800/600" alt="">
-  <div class= info>
-       <h2> David Martin</h2>
-    <button class=b1>my projects</button>
-       <p>This is all new to me. I was a ranch foreman, now I am learning to code and I'm putting in maximum effort! I think I'm doing ok for a horse trainer although, learning these skills is a 14 hour a day process so far <span>GO ME!</span></p>
-       </div>
-</section>
-   <section class="gallery1">
-  <div> <img src="https://picsum.photos/400" alt="">
-    <p>Here is ths</p>
-  </div>
-  <div> <img src="https://picsum.photos/400" alt=""> 
-    <p>And this</p></div>
-    <div> <img src="https://picsum.photos/400" alt="">
-        <p>And that</p></div>
-        <div> <img src="https://picsum.photos/400" alt="">
-            <p>Don't forget this</p></div>
-</section>
-<section class="gallery1">
-    <div> <img src="https://picsum.photos/400" alt="">
+  <section class="main">
+    <div class="img-cont">
+      <img src="https://picsum.photos/800/600" alt="">
+    </div>
+    <div class= info>
+      <h2> David Martin</h2>
+      <button class="b1">my projects</button>
+      <p>This is all new to me. I was a ranch foreman, now I am learning to code and I'm putting in maximum effort! I think I'm doing ok for a horse trainer although, learning these skills is a 14 hour a day process so far <span>GO ME!</span></p>
+    </div>
+  </section>
+  <section class="gallery1">
+    <div class="picpair">
+      <div>
+        <img src="https://picsum.photos/400" alt="">
         <p>Here is ths</p>
       </div>
-      <div> <img src="https://picsum.photos/400" alt="">
+      <div> 
+        <img src="https://picsum.photos/400" alt=""> 
+        <p>And this</p>
+      </div>
+    </div>
+    <div class="picpair">
+      <div>
+        <img src="https://picsum.photos/400" alt="">
+        <p>And that</p>
+      </div>
+      <div>
+        <img src="https://picsum.photos/400" alt="">
+        <p>Don't forget this</p>
+      </div>
+    </div>
+  </section>
+  <section class="gallery1">
+    <div class="picpair">
+      <div>
+        <img src="https://picsum.photos/400" alt="">
         <p>Here is ths</p>
       </div>
-      <div> <img src="https://picsum.photos/400" alt="">
+      <div>
+        <img src="https://picsum.photos/400" alt="">
         <p>Here is ths</p>
       </div>
-      <div> <img src="https://picsum.photos/400" alt="">
+    </div>
+    <div class="picpair">
+      <div>
+        <img src="https://picsum.photos/400" alt="">
         <p>Here is ths</p>
       </div>
-   
-</section>
-<footer>
-    <h3>Like what you see?</h3>
-    <button class=b2>Contact me</button>
-</footer>
+      <div>
+        <img src="https://picsum.photos/400" alt="">
+        <p>Here is ths</p>
+      </div>
+    </div>
+  </section>
+  <footer>
+      <h3>Like what you see?</h3>
+      <button class=b2>Contact me</button>
+  </footer>
 </body>
 </html>
