--- a/index.html
+++ b/index.html
@@ -3,9 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">    
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="name">
+                <h2>David Martin</h2>
+            </div>
+            <div class="links">
+             <a href="index.html">Home</a>
+             <a href="about.html">About</a>
+             <a href="contact.html">Contact</a>
+             <a href="projects.html">Projects</a>
+            </div>  
+        </nav>
+    </header>
+    <section class="main">
+        <h1>David J. Martin</h1>
+        <button id="projects"><a href='projects.html'>My Projects</a> </button>
+    </section>
+    <section class="gallery">
+        <div class=img-cont1>
+            <img src="https://picsum.photos/500" alt="screen reader friendly">
+            <p>Here</p>
+        </div>
+        <div class="img-cont2">
+            <img src="https://picsum.photos/500" alt="screen reader friendly">
+            <p>Is</p>
+        </div>
+        <div class="img-cont3">
+            <img src="https://picsum.photos/500" alt="screen reader friendly">
+            <p>My</p>
+        </div>
+        <div class="img-cont4">
+            <img src="https://picsum.photos/500" alt="screen reader friendly">
+            <p>List</p>
+        </div>
+        <div class="imgcont5">
+            <img src="https://picsum.photos/500" alt="screen reader friendly">
+            <p>Of</p>
+        </div>
+        <div class="img-cont5">
+            <img src="https://picsum.photos/500" alt="screen reader friendly">
+            <p>Projects</p>
+        </div>
+
+    </section>
+    <footer>
+            <button><a href="contact.html">Contact me</a></button>
+    </footer>
 </body>
 </html>
